--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3307/DAWI_CL3_CESAR_LEIVA?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3307/DAWI_CL3_GRUPO_6?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= admin
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
